# mac-dev-clean

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: MacDevClean 开发说明书初稿.md
src/: cli.rs  config.rs  gui.rs  main.rs  report.rs  utils.rs
src/executor/: mod.rs  trash_ops.rs
src/scanner/: ai.rs  ai_ide.rs  chat.rs  dev.rs  docker.rs  downloads.rs  guard.rs  ide.rs  mod.rs  pkgmgr.rs
