[package]
name = "macdevclean"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
dialoguer = "0.12.0"
dirs = "6.0.0"
eframe = "0.34.3"
egui = "0.34.3"
image = "0.25.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
trash = "5.2.6"
walkdir = "2.5.0"

[package.metadata.bundle]
name = "MacDevClean"
identifier = "com.aning35.macdevclean"
version = "0.1.0"
copyright = "Copyright (c) aning35"
short_description = "The safest cache cleaner for macOS developers."
long_description = "MacDevClean safely cleans development caches (npm, Docker, Python, etc.) with a strict trash-first policy."
icon = [
    "docs/logo_512.png"
]
